--- a/css/MainStyles.css
+++ b/css/MainStyles.css
@@ -13,15 +13,16 @@ iframe{
 }
 
 a {
-	width: 97px;
+	width: auto;
     background-color: transparent;
 	display: inline-block;
-	float: center;
+	text-align: center;
 	font-size: 30px;
     color: white;
     padding: 8px 16px;
     text-decoration: none;
 	text-align: center;
+	margin-right:15px;
 }
 
 a:hover {
