--- a/css/homepage-styles.css
+++ b/css/homepage-styles.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url("pics/MainBackground.jpg");
+	background-image: url("../resources/graphics/main-bg.jpg");
     height: 100%; 
     background-position: center;
     background-repeat: no-repeat;
