--- a/css/homepage-styles.css
+++ b/css/homepage-styles.css
@@ -41,6 +41,7 @@ a:active {
 }
  
 .top{
+	position: relative;
 	padding: 5px 5px 5px 5px;
 	margin-right: 10px;
 	margin-bottom: 20px;
@@ -48,6 +49,8 @@ a:active {
 	background-color: transparent;
 	border-radius: 6px;
 	height: 50px;
+	width: max-content;
+	left: 30%;
 }
 .carousel{
 	display: flex;
@@ -72,23 +75,6 @@ button:hover{
 	background-color: green;
 	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
     color: white;
-}
-
-input[type=text] {
-    width: 130px;
-	height: 45px;
-	float:right;
-    box-sizing: border-box;
-    font-size: 16px;
-	margin-top: 0%;
-    background-color: white;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
-
-input[type=text]:focus {
-    width: 20%;
 }
 
 footer{
