--- a/product-order/order.css
+++ b/product-order/order.css
@@ -57,6 +57,12 @@ form{
     margin: 0px auto;
     width:75%;
 }
+
+/*
+==================================================
+                GENERAL STYLING
+==================================================
+*/
 footer{
     position: absolute;
     right: 0;
@@ -64,12 +70,47 @@ footer{
     padding: 3rem;
     text-align: center; 
 }
+.top{
+	position: relative;
+	padding: 5px 5px 5px 5px;
+	margin-right: 10px;
+	margin-bottom: 20px;
+	font-size: 30px;
+	background-color: transparent;
+	border-radius: 6px;
+	height: 50px;
+	width: max-content;
+	left: 30%;
+}
+a {
+	width: auto;
+    background-color: transparent;
+	display: inline-block;
+	text-align: center;
+	font-size: 30px;
+    color: white;
+    font-family: "Iceland";
+    padding: 8px 16px;
+    text-decoration: none;
+	text-align: center;
+	margin-right:15px;
+}
 
-/*
-==================================================
-                GENERAL STYLING
-==================================================
-*/
+a:hover {
+    background-color: #f1f1f1;
+	box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    color: black;
+}
+
+a:active {
+	transform: translateY(4px);
+}
+
+.active{
+	background-color: #f1f1f1;
+	color:black;
+}
+
 #btnSubmitForm{
     border: 1px solid white;
     border-radius: 10px;
@@ -78,14 +119,25 @@ footer{
     height: 30px;
     width: 125px;
 }
-
 #btnSubmitForm:enabled{
     background-color:#189ad3;
 }
-
 #btnSubmitForm :disabled{
     background-color: grey;
 }
+textarea, select, select > option, input{
+    color: black !important;
+}
+body{
+	background-image: url("../resources/graphics/main-bg.jpg");
+    height: 100%; 
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+	font-family: 'Iceland', cursive;
+}
 *{
     font-family: "Open Sans";
+    color:white;
 }
