--- a/css/feedback-form-styles.css
+++ b/css/feedback-form-styles.css
@@ -7,10 +7,6 @@ body{
 }
 
 form{
-    font-size: 18px;
-}
-
-div {
 	background-color: lightgrey;
 	width: 650px;
 	height: 300px;
@@ -18,12 +14,13 @@ div {
 	margin: 25px;
 	border-radius: 6px;
 	margin:0 auto;
+	font-size: 18px;
 }
 
 h3{
 	color:lightgrey;
 	font:"Lucida Sans Unicode", "Lucida Grande", sans-serif;
-	margin-top: -20px;
+	margin-top: 20px;
 	font-size:75px;
 	text-align:center;
 	text-decoration:underline;
@@ -76,15 +73,16 @@ label{
 }
 
 a {
-	width: 97px;
+	width: auto;
     background-color: transparent;
 	display: inline-block;
-	float: center;
+	text-align: center;
 	font-size: 30px;
     color: white;
     padding: 8px 16px;
     text-decoration: none;
 	text-align: center;
+	margin-right:15px;
 }
 
 a:hover {
@@ -95,25 +93,21 @@ a:hover {
 
 a:active {
 	transform: translateY(4px);
-	
-	
 }
 
 .active{
 	background-color: #f1f1f1;
 	color:black;
-} 
+}
  
 .top{
-	padding: 5px 5px 5px 5px;
-	margin-top: -50px;
-	margin-right: 10px;
-	margin-bottom: 20px;
+	position: relative;
 	font-size: 30px;
 	background-color: transparent;
 	border-radius: 6px;
-	width: 100%;
 	height: 50px;
+	width: max-content;
+	margin: 0 auto;
 }
 
 .cv{
