--- a/product-order/order.css
+++ b/product-order/order.css
@@ -79,8 +79,8 @@ footer{
 	background-color: transparent;
 	border-radius: 6px;
 	height: 50px;
-	width: max-content;
-	left: 30%;
+    width: max-content;
+    margin:auto;
 }
 a {
 	width: auto;
